--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 # Dependencies
 node_modules
+venv
 
 # Environment
 .env
@@ -27,3 +28,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#Other
+/backend/generated_coordinates
+/backend/utils
+/backend/config
