Implemented google login

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,3 +4,8 @@ VITE_GOOGLE_MAPS_API_KEY=YOUR_API_KEY
 
 # Backend URL (change if your backend runs on a different port/host)
 VITE_API_URL=http://localhost:4000
+
+# Google OAuth Client ID
+# Get one at: https://console.cloud.google.com/apis/credentials
+# Make sure to add authorized JavaScript origins (e.g., http://localhost:5173)
+VITE_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com
