--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "google-auth-library": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
