--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2",
+    "better-sqlite3": "^12.6.2",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "google-auth-library": "^9.0.0"
   },
   "devDependencies": {
